fixes to logo label and ratings spacing

--- a/src/components/labels/LogoLabel.scss
+++ b/src/components/labels/LogoLabel.scss
@@ -6,30 +6,25 @@
   overflow: hidden;
   border: 0;
 
-  #{$label}__logo, #{$label}__info {
-    padding: 8px;
+  &__logo, &__info {
     border: 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 16px;
   }
 
-  #{$label}__info {
+  &__info {
     border-color: var(--mid-grey);
     border-left: 0;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
   }
 
-  #{$label}__logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  &__logo {
     border-right: 0;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
-  }
-
-  &__info {
-    padding: 0 4px;
-    display: block;
   }
 }
 
