--- a/src/views/Movie.scss
+++ b/src/views/Movie.scss
@@ -33,10 +33,11 @@
   }
 
   &__rating {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    grid-auto-flow: column;
-    grid-column-gap: 16px;
+    display: flex;
+
+    > div {
+      margin-right: 16px;
+    }
   }
 
   &__title {
